--- a/app/assets/styles/modules/_btn.css
+++ b/app/assets/styles/modules/_btn.css
@@ -1,5 +1,5 @@
 .btn {
-  background-color: #2f5572;
+  background-color: $mainBlue;
   color: #FFF;
   text-decoration: none;
   padding: .75rem 1.2rem;
@@ -9,12 +9,12 @@
     background-color: $mainOrange;
   }
 
-&--large {
-  padding: 1.1rem 1.9rem;
+  &--large {
+    padding: 1.1rem 1.9rem;
 
-  @mixin atSmall {
-    font-size: 1.25rem;
+    @mixin atSmall {
+      font-size: 1.25rem;
+    }
   }
-}
 
 }
