completed footer styling

--- a/app/assets/styles/modules/_row.css
+++ b/app/assets/styles/modules/_row.css
@@ -95,8 +95,8 @@
     }
 
   }
-
-  /* Begin Equal Heigh Rules */
+  
+  /* Begin Equal Height Rules */
   &--equal-height-at-medium {
     @mixin atMedium {
       display: flex;
