--- a/app/assets/styles/modules/_wrapper.css
+++ b/app/assets/styles/modules/_wrapper.css
@@ -14,7 +14,7 @@
     padding-left: 0;
     padding-right: 0;
 
-    mixin atMedium {
+    @mixin atMedium {
       padding-left: 18px;
       padding-right: 18px;
     }
@@ -24,7 +24,7 @@
     padding-left: 0;
     padding-right: 0;
 
-    mixin atLarge {
+    @mixin atLarge {
       padding-left: 18px;
       padding-right: 18px;
     }
