--- a/app/assets/styles/modules/_site-header.css
+++ b/app/assets/styles/modules/_site-header.css
@@ -3,7 +3,7 @@
   position: absolute;
   width: 100%;
   z-index: 2;
-
+  
   @mixin atMedium {
     background-color: rgba($mainBlue, .3);
   }
@@ -17,7 +17,7 @@
     top: 0;
     left: 50%;
     transform: translateX(-50%) scale(.8);
-    transform-origin: 50% 0%;
+    transform-origin: 50% 0;
     background-color: $mainBlue;
     padding: 25px 36px;
 
